# QtAcademyDay4

./: CMakeLists.txt  Main.qml  main.cpp
